[feat] implement classes and functions definition

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,9 @@
-add_library(parfume_bazaar_lib parfume_bazaar.cpp) #сюда добавлять новые cpp через пробел!!!
+add_library(parfume_bazaar_lib parfume_bazaar.cpp
+        date.cpp
+        admin.cpp
+        bargain.cpp
+        item.cpp
+        makler.cpp) #сюда добавлять новые cpp через пробел!!!
 add_library(sqlite3 ../include/sql/sqlite3.c)
 target_include_directories(parfume_bazaar_lib PUBLIC ../include)
 target_link_libraries(parfume_bazaar_lib PUBLIC sqlite3)
